syntax = "proto3";

option go_package = "../go;blog";

package blog;

import "google/api/annotations.proto";

message Author {
    uint64 id = 1;
    string username = 2;
    string avatar_url = 3;
}

message Post {
    uint64 id = 1;
    uint64 author_id = 2;
    string created_at = 3;
    string body = 4;
    uint64 likes_count = 5;
    bool liked_by_user = 6;
}

message GetPostsRequest {
    uint32 limit = 1;
    uint32 offset = 2;
}

message GetPostsResponse {
    repeated Post posts = 1;
}

message CreatePostRequest {
    string body = 1;
}

message EditPostRequest {
    int64 post_id = 1;
    string body = 2;
}

message DeletePostRequest {
    int64 post_id = 1;
}

message LikePostRequest {
    int64 post_id = 1;
}

message UnlikePostRequest {
    int64 post_id = 1;
}

message EmptyResponse {}

service BlogService {
    rpc GetPosts(GetPostsRequest) returns (GetPostsResponse) {
        option (google.api.http) = {
            get: "/v1/posts"
        };
    }

    rpc CreatePost(CreatePostRequest) returns (Post) {
        option (google.api.http) = {
            post: "/v1/posts"
            body: "*"
        };
    }

    rpc EditPost(EditPostRequest) returns (Post) {
        option (google.api.http) = {
            put: "/v1/posts/{post_id}"
            body: "*"
        };
    }

    rpc DeletePost(DeletePostRequest) returns (EmptyResponse) {
        option (google.api.http) = {
            delete: "/v1/posts/{post_id}"
        };
    }

    rpc LikePost(LikePostRequest) returns (EmptyResponse) {
        option (google.api.http) = {
            post: "/v1/posts/{post_id}/like"
        };
    }

    rpc UnlikePost(UnlikePostRequest) returns (EmptyResponse) {
        option (google.api.http) = {
            delete: "/v1/posts/{post_id}/like"
        };
    }
}
